Create toolbar for revealing / flagging mines

--- a/src/app/sweeper/sweeper.module.css
+++ b/src/app/sweeper/sweeper.module.css
@@ -22,3 +22,20 @@
 .visited {
   background-color: var(--mauve);
 }
+
+.toolBar {
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.toolBarButton {
+  background-color: var(--light-grey);
+  border: none;
+  width: 2rem;
+  height: 2rem;
+  margin: 0 1px;
+}
+
+.selected {
+  background-color: var(--medium-grey);
+}
