Styling - fonts, margins, paddings, colors etc.

--- a/src/app/sweeper/sweeper.module.css
+++ b/src/app/sweeper/sweeper.module.css
@@ -2,7 +2,13 @@
   display: flex;
   width: 20rem;
   flex-wrap: wrap;
-  background-color: var(--champagne-pink);
+  background: var(--champagne-pink);
+  background: linear-gradient(
+    90deg,
+    rgba(253, 228, 207, 1) 0%,
+    rgba(255, 207, 210, 1) 40%,
+    rgba(241, 192, 232, 1) 100%
+  );
   border-radius: var(--border-radius);
 }
 
@@ -30,7 +36,13 @@
   padding: 0.5rem;
   margin-bottom: 1rem;
   align-items: center;
-  background-color: var(--champagne-pink);
+  background: var(--champagne-pink);
+  background: linear-gradient(
+    90deg,
+    rgba(253, 228, 207, 1) 0%,
+    rgba(255, 207, 210, 1) 40%,
+    rgba(241, 192, 232, 1) 100%
+  );
   border-radius: var(--border-radius);
 }
 
