--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,16 +9,16 @@
   --light-grey: #d3d3d3;
   --medium-grey: #bbbbbb;
 
-  --lemon-chiffon: #fbf8ccff;
-  --champagne-pink: #fde4cfff;
-  --tea-rose-red: #ffcfd2ff;
-  --pink-lavender: #f1c0e8ff;
-  --mauve: #cfbaf0ff;
-  --jordy-blue: #a3c4f3ff;
-  --non-photo-blue: #90dbf4ff;
-  --electric-blue: #8eecf5ff;
-  --aquamarine: #98f5e1ff;
-  --celadon: #b9fbc0ff;
+  --lemon-chiffon: #fbf8cc;
+  --champagne-pink: #fde4cf;
+  --tea-rose-red: #ffcfd2;
+  --pink-lavender: #f1c0e8;
+  --mauve: #cfbaf0;
+  --jordy-blue: #a3c4f3;
+  --non-photo-blue: #90dbf4;
+  --electric-blue: #8eecf5;
+  --aquamarine: #98f5e1;
+  --celadon: #b9fbc0;
 }
 
 * {
@@ -50,4 +50,5 @@ h4,
 h5,
 h6 {
   margin: 0.75em 0;
+  font-weight: 400;
 }
