--- a/src/app/sweeper/sweeper.module.css
+++ b/src/app/sweeper/sweeper.module.css
@@ -57,6 +57,11 @@
   margin-right: 0.5rem;
 }
 
+.toolBarButton:last-child {
+  margin-left: auto;
+  margin-right: 0;
+}
+
 .selected {
   background-color: rgba(0, 0, 0, 0.3);
 }
