--- a/src/app/sweeper/sweeper.module.css
+++ b/src/app/sweeper/sweeper.module.css
@@ -9,7 +9,6 @@
     rgba(255, 207, 210, 1) 40%,
     rgba(241, 192, 232, 1) 100%
   );
-  border-radius: var(--border-radius);
 }
 
 .gridItem {
@@ -18,14 +17,20 @@
   align-items: center;
   width: 2rem;
   height: 2rem;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-width: 2px;
+  border-style: solid;
+  border-color: rgba(255, 255, 255, 0.3);
+  border-bottom-color: rgba(0, 0, 0, 0.05);
+  border-right-color: rgba(0, 0, 0, 0.05);
   /* text-align: center; */
   font-weight: bold;
   /* opacity: 0.7; */
-  font-size: 1.25rem;
+  font-size: 1.1rem;
   cursor: pointer;
 }
 
 .visited {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.05);
+  border-width: 1px;
+  border-color: rgba(0, 0, 0, 0.1);
 }
