--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,7 @@
   --white: #ffffff;
   --light-grey: #d3d3d3;
   --medium-grey: #bbbbbb;
+  --dark-grey: #222;
 
   --lemon-chiffon: #fbf8cc;
   --champagne-pink: #fde4cf;
@@ -36,6 +37,8 @@ body {
 body {
   color: var(--black);
   background: var(--white);
+  font-size: 1.25rem;
+  color: var(--dark-grey);
 }
 
 a {
@@ -51,4 +54,21 @@ h5,
 h6 {
   margin: 0.75em 0;
   font-weight: 400;
+  letter-spacing: 0.05em;
+  line-height: 1em;
+}
+
+h1 {
+  font-size: 2.25rem;
+}
+
+h2 {
+  font-size: 1.2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+p {
+  font-size: 1.125rem;
+  line-height: 1.8em;
 }
