High scores to UI

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,3 +1,6 @@
+@value breakpoints: "../../styles/breakpoints.css";
+@value tablet from breakpoints;
+
 .header {
   padding: 2.5rem 0;
   margin-bottom: 3rem;
