--- a/src/app/sweeper/sweeper.module.css
+++ b/src/app/sweeper/sweeper.module.css
@@ -9,6 +9,7 @@
     rgba(255, 207, 210, 1) 40%,
     rgba(241, 192, 232, 1) 100%
   );
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.1);
 }
 
 .gridItem {
