--- a/src/components/sweeperToolbar/sweeperToolbar.module.css
+++ b/src/components/sweeperToolbar/sweeperToolbar.module.css
@@ -13,6 +13,8 @@
     rgba(255, 207, 210, 1) 40%,
     rgba(241, 192, 232, 1) 100%
   );
+  border: 1px solid var(--light-grey);
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.1);
 }
 
 .toolBarButton {
