Contact page added  + updated some link styles

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -14,3 +14,13 @@
     margin-bottom: 4rem;
   }
 }
+
+.linkToHome {
+  text-align: left;
+  transform: translateY(-1.5rem);
+}
+
+.linkToHome::before {
+  content: "←";
+  margin-right: 0.25rem;
+}
