--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,6 +1,6 @@
 .footerText {
   text-align: center;
-  height: 3rem;
-  padding-top: -3rem;
+  height: 2rem;
+  margin-top: -2rem;
   text-align: center;
 }
