--- a/src/components/notification/notification.module.css
+++ b/src/components/notification/notification.module.css
@@ -1,9 +1,18 @@
+@value breakpoints: "@/styles/breakpoints.css";
+@value tablet from breakpoints;
+
 .error {
   background-color: tomato;
   color: white;
   position: fixed;
   bottom: 1rem;
-  /* left: 0.25rem; */
+  left: 1rem;
   right: 1rem;
   padding: 1rem;
+}
+
+@media tablet {
+  .error {
+    left: unset;
+  }
 }
