--- a/src/components/sweeperGrid/sweeper.module.css
+++ b/src/components/sweeperGrid/sweeper.module.css
@@ -12,6 +12,16 @@
   box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.1);
 }
 
+.errorContainer {
+  width: 20rem;
+  height: 20rem;
+  background: var(--light-grey);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .skeletonContainer {
   width: 20rem;
   height: 20rem;
