--- a/src/components/sweeperGrid/sweeper.module.css
+++ b/src/components/sweeperGrid/sweeper.module.css
@@ -22,10 +22,18 @@
   justify-content: center;
 }
 
+.errorIcon {
+  font-size: 1.5rem;
+}
+
 .skeletonContainer {
   width: 20rem;
   height: 20rem;
   background: var(--tea-rose-red);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   animation: skeleton 2000ms ease-in-out infinite;
 }
 
