--- a/src/components/sweeperToolbar/sweeperToolbar.module.css
+++ b/src/components/sweeperToolbar/sweeperToolbar.module.css
@@ -18,6 +18,9 @@
 }
 
 .toolBarButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: rgba(255, 255, 255, 0.2);
   border-style: solid;
   border-width: 2px;
@@ -40,4 +43,25 @@
   background-color: rgba(0, 0, 0, 0.05);
   border-width: 2px;
   border-color: rgba(0, 0, 0, 0.05);
+}
+
+.startButton {
+  composes: toolBarButton;
+  position: relative;
+}
+
+.startButton:hover::before,
+.startButton:focus::before {
+  content: "New game";
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+  font-size: 0.75rem;
+  letter-spacing: 0.1em;
+  color: white;
+  background-color: var(--dark-grey);
+  position: absolute;
+  top: -4rem;
+  border-radius: 4px;
 }
