--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -28,6 +28,11 @@
   background-color: var(--medium-lila);
 }
 
+.notFoundContainer {
+  margin-top: 2rem;
+  text-align: center;
+}
+
 @media tablet {
   .tableRow,
   .tableHeading {
